--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -3,9 +3,11 @@
 <!-- Setup Google Analytics -->
 {% include analytics.html %}
  
-<link rel="shortcut icon" type="image/x-icon" href="/cv/favicon.ico">
+<link rel="shortcut icon" type="image/png" href="favicon.ico">
+<link rel="stylesheet" type="text/css" href="/assets/css/video.css">
 
 <style>
+
 details > summary {
   padding: 4px;
   width: 100px;
